--- a/suricata.html
+++ b/suricata.html
@@ -50,7 +50,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-12 col-lg-4 col-xl-4 col-xs-12 col-sm-12 col-md-4 my-4 d-flex justify-content-sm-center">
+    <div class="col-12 col-lg-4 col-xl-4 col-xs-12 col-sm-12 col-md-4 my-4 d-flex justify-content-sm-center">
         <div class="card text-left mx-3 " style="width: 18rem">
           <img src="assets\img\colaciones.jpg" class="card-img-top imagen-fluid" alt="colaciones">
           <div class="card-body">
@@ -67,25 +67,25 @@
             <a href="#" class="card-link">Comprar</a>
           </div>
         </div>
-      </div>
-      <div class="col-lg-4 col-xl-4 col-xs-12 col-sm-12 col-md-4 my-4 d-flex justify-content-sm-center">
-        <div class="card text-left mx-3" style="width: 18rem ">
-          <img src="assets\img\desayunos.jpg" class="card-img-top" alt="Desayunos">
-          <div class="card-body ">
-            <h5 class="card-title">Desayunos</h5>
-            <p class="card-text">Iste natus error sit voluptatem accusantium</p>
-          </div>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">Morbi leo risus</li>
-            <li class="list-group-item">Porta ac consectetur ac</li>
-          </ul>
-          <div class="card-body">
-            <a href="#" class="card-link">Ver más</a>
-            <a href="#" class="card-link">Comprar</a>
-          </div>
+    </div>
+    <div class="col-12 col-lg-4 col-xl-4 col-xs-12 col-sm-12 col-md-4 my-4 d-flex justify-content-sm-center">
+      <div class="card text-left mx-3" style="width: 18rem ">
+        <img src="assets\img\desayunos.jpg" class="card-img-top imagen-fluid" alt="Desayunos">
+        <div class="card-body ">
+          <h5 class="card-title">Desayunos</h5>
+          <p class="card-text">Iste natus error sit voluptatem accusantium</p>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Morbi leo risus</li>
+          <li class="list-group-item">Porta ac consectetur ac</li>
+        </ul>
+        <div class="card-body">
+          <a href="#" class="card-link">Ver más</a>
+          <a href="#" class="card-link">Comprar</a>
         </div>
       </div>
-      <div class="col-lg-4 col-xl-4 col-xs-12 my-4 d-flex justify-content-sm-center">
+    </div>
+    <div class="col-12 col-lg-4 col-xl-4 col-xs-12 col-sm-12 col-md-4 my-4 d-flex justify-content-sm-center">
         <div class="card text-left mx-3" style="width: 18rem">
           <img src="assets\img\bebidas.jpg" class="card-img-top" alt="bebidas">
           <div class="card-body">
@@ -101,42 +101,43 @@
             <a href="#" class="card-link">Comprar</a>
           </div>
         </div>
-      </div>
     </div>
+  </div>
     <div class="row">
-    <div class="col-12 col-lg-4 col-xl-4 col-xs-12 col-sm-12 col-md-4 my-4 d-flex justify-content-sm-center">
-        <div class="card text-left mx-3" style="width: 18rem;">
-          <img src="assets\img\verduras.jpg" class="card-img-top" alt="Verduras">
-          <div class="card-body">
-            <h5 class="card-title">Verduras</h5>
-            <p class="card-text">Ipsa quae ab illo inventore veritatis et quasi architecto</p>
-          </div>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">Morbi leo risus</li>
-            <li class="list-group-item">Porta ac consectetur ac</li>
-          </ul>
-          <div class="card-body">
-            <a href="#" class="card-link">Ver Más</a>
-            <a href="#" class="card-link">Comprar</a>
-          </div>
+
+      <div class="col-12 col-lg-4 col-xl-4 col-xs-12 col-sm-12 col-md-4 my-4 d-flex justify-content-sm-center">
+      <div class="card text-left mx-3" style="width: 18rem;">
+        <img src="assets\img\verduras.jpg" class="card-img-top" alt="Verduras">
+        <div class="card-body">
+          <h5 class="card-title">Verduras</h5>
+          <p class="card-text">Ipsa quae ab illo inventore veritatis et quasi architecto</p>
         </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Morbi leo risus</li>
+          <li class="list-group-item">Porta ac consectetur ac</li>
+        </ul>
+        <div class="card-body">
+          <a href="#" class="card-link">Ver Más</a>
+          <a href="#" class="card-link">Comprar</a>
+        </div>
+      </div>
       </div>
       <div class="col-12 col-lg-4 col-xl-4 col-xs-12 col-sm-12 col-md-4 my-4 d-flex justify-content-sm-center">
-        <div class="card text-left mx-3" style="width: 18rem;">
-          <img src="assets\img\dulces.jpg" class="card-img-top" alt="Dulces">
-          <div class="card-body">
-            <h5 class="card-title">Dulces</h5>
-            <p class="card-text">Some quick example text to build on the card title and</p>
-          </div>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">Morbi leo risus</li>
-            <li class="list-group-item">Porta ac consectetur ac</li>
-          </ul>
-          <div class="card-body">
-            <a href="#" class="card-link">Ver Más</a>
-            <a href="#" class="card-link">Comprar</a>
-          </div>
+      <div class="card text-left mx-3" style="width: 18rem;">
+        <img src="assets\img\dulces.jpg" class="card-img-top" alt="Dulces">
+        <div class="card-body">
+          <h5 class="card-title">Dulces</h5>
+          <p class="card-text">Some quick example text to build on the card title and</p>
         </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Morbi leo risus</li>
+          <li class="list-group-item">Porta ac consectetur ac</li>
+        </ul>
+        <div class="card-body">
+          <a href="#" class="card-link">Ver Más</a>
+          <a href="#" class="card-link">Comprar</a>
+        </div>
+      </div>
       </div>
       <div class="col-12 col-lg-4 col-xl-4 col-xs-12 col-sm-12 col-md-4 my-4 d-flex justify-content-sm-center">
         <div class="card text-left mx-3" style="width: 18rem;">
